Fix: Make search placeholder text visible on smaller screens

--- a/Forkify/src/sass/_header.scss
+++ b/Forkify/src/sass/_header.scss
@@ -47,7 +47,7 @@
       width: auto;
 
       &::placeholder {
-        color: white;
+        color: base.$color-grey-light-3;
       }
     }
   }
